--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -117,7 +117,8 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
       - run: pip install black[d]==22.12.0
-      - run: |
+      - name: Run tests
+        run: |
           export INSTA_SNAPSHOT_REFERENCES_FILE="$(mktemp)"
           cargo test --all
           UNUSED_SNAPSHOTS=$(cat <(git ls-files '*.snap' | xargs realpath) <(cat $INSTA_SNAPSHOT_REFERENCES_FILE) | sort | uniq -u)
