Use relative path

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -121,7 +121,8 @@ jobs:
         run: |
           export INSTA_SNAPSHOT_REFERENCES_FILE="$(mktemp)"
           cargo test --all
-          UNUSED_SNAPSHOTS=$(cat <(git ls-files '*.snap' | xargs realpath) <(cat $INSTA_SNAPSHOT_REFERENCES_FILE) | sort | uniq -u)
+          USED_SNAPSHOTS=$(cat $INSTA_SNAPSHOT_REFERENCES_FILE | xargs realpath --relative-to $PWD)
+          UNUSED_SNAPSHOTS=$(cat <(git ls-files '*.snap') <(echo $USED_SNAPSHOTS) | sort | uniq -u)
           if [ ! -z "$UNUSED_SNAPSHOTS" ]; then
             echo "Found unused snapshots:"
             echo "$UNUSED_SNAPSHOTS"
