--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -122,7 +122,7 @@ jobs:
           export INSTA_SNAPSHOT_REFERENCES_FILE="$(mktemp)"
           cargo test --all
           USED_SNAPSHOTS=$(cat $INSTA_SNAPSHOT_REFERENCES_FILE | xargs realpath --relative-to $PWD)
-          UNUSED_SNAPSHOTS=$(cat <(git ls-files '*.snap') <(echo $USED_SNAPSHOTS) | sort | uniq -u)
+          UNUSED_SNAPSHOTS=$(cat <(git ls-files '*.snap') <(echo "$USED_SNAPSHOTS") | sort | uniq -u)
           if [ ! -z "$UNUSED_SNAPSHOTS" ]; then
             echo "Found unused snapshots:"
             echo "$UNUSED_SNAPSHOTS"
