--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -117,7 +117,17 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
       - run: pip install black[d]==22.12.0
-      - run: cargo test --all
+      - name: Run tests
+        run: |
+          export INSTA_SNAPSHOT_REFERENCES_FILE="$(mktemp)"
+          cargo test --all
+          USED_SNAPSHOTS=$(cat $INSTA_SNAPSHOT_REFERENCES_FILE | xargs realpath --relative-to $PWD)
+          UNUSED_SNAPSHOTS=$(cat <(git ls-files '*.snap') <(echo "$USED_SNAPSHOTS") | sort | uniq -u)
+          if [ ! -z "$UNUSED_SNAPSHOTS" ]; then
+            echo "Found unused snapshots:"
+            echo "$UNUSED_SNAPSHOTS"
+            exit 1
+          fi
       - run: cargo test --package ruff --test black_compatibility_test -- --ignored
 
 # TODO(charlie): Re-enable the `wasm-pack` tests.
