--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -187,7 +187,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
-        uses: actions/checkout@3
+        uses: actions/checkout@v3
 
       - name: Setup Python 3.9
         uses: actions/setup-python@v4
