Add typo linter (#1553)

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -181,3 +181,15 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
       - run: maturin build -b bin
+
+  typos:
+    name: Spell Check with Typos
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout Actions Repository
+      uses: actions/checkout@v2
+
+    - name: Check spelling of file.txt
+      uses: crate-ci/typos@master
+      with:
+        files: .
