--- a/ruff_macros/Cargo.toml
+++ b/ruff_macros/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
-once_cell = "1.17.0"
+once_cell = { version = "1.17.0" }
 proc-macro2 = { version = "1.0.47" }
 quote = { version = "1.0.21" }
 syn = { version = "1.0.103", features = ["derive", "parsing"] }
