Replace `toml` with `toml_edit`
The `toml` crate doesn't support TOML 1.0, but `toml_edit` does.
While there is a plan to [migrate `toml` to be on `toml_edit`](https://github.com/toml-rs/toml/issues/340),
it's not ready yet and it's very easy to switch back to `toml` when
it's ready.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,7 +66,7 @@ strum = { version = "0.24.1", features = ["strum_macros"] }
 strum_macros = { version = "0.24.3" }
 textwrap = { version = "0.16.0" }
 titlecase = { version = "2.2.1" }
-toml = { version = "0.5.9" }
+toml_edit = { version = "0.17.1", features = ["easy"] }
 walkdir = { version = "2.3.2" }
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
