--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ bitflags = { version = "1.3.2" }
 cachedir = { version = "0.3.0" }
 cfg-if = { version = "1.0.0" }
 chrono = { version = "0.4.21", default-features = false, features = ["clock"] }
-clap = { version = "4.0.1", features = ["derive"] }
+clap = { version = "4.0.1", features = ["derive", "env"] }
 clap_complete_command = { version = "0.4.0" }
 colored = { version = "2.0.0" }
 dirs = { version = "4.0.0" }
