--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,3 +42,9 @@ license-files = [
   "LICENSE",
   "licenses/*",
 ]
+
+[tool.isort]
+add_imports = "from __future__ import annotations"
+
+[tool.ruff.isort]
+required-imports = ["from __future__ import annotations"]
