--- a/.github/workflows/playground.yaml
+++ b/.github/workflows/playground.yaml
@@ -17,12 +17,7 @@ jobs:
        CF_API_TOKEN_EXISTS: ${{ secrets.CF_API_TOKEN != '' }}
     steps:
       - uses: actions/checkout@v3
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: nightly-2022-11-01
-          override: true
-          target: wasm32-unknown-unknown
+      - run: rustup show
       - uses: actions/setup-node@v3
         with:
           node-version: 18
