--- a/ruff_dev/Cargo.toml
+++ b/ruff_dev/Cargo.toml
@@ -3,6 +3,10 @@ name = "ruff_dev"
 version = "0.0.217"
 edition = "2021"
 
+[lib]
+name = "ruff_dev"
+doctest = false
+
 [dependencies]
 anyhow = { version = "1.0.66" }
 clap = { version = "4.0.1", features = ["derive"] }
