Move top level `ruff` into `python` folder

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ urls = { repository = "https://github.com/charliermarsh/ruff" }
 
 [tool.maturin]
 bindings = "bin"
+python-source = "python"
 strip = true
 
 [tool.setuptools]
