--- a/ruff_cli/Cargo.toml
+++ b/ruff_cli/Cargo.toml
@@ -17,6 +17,12 @@ name = "ruff"
 path = "src/main.rs"
 doctest = false
 
+# Since the name of the binary is the same as the name of the `ruff` crate
+# running `cargo doc --no-deps --all` results in an `output filename collision`
+# See also https://github.com/rust-lang/cargo/issues/6313.
+# We therefore disable the documentation generation for the binary.
+doc = false
+
 [dependencies]
 ruff = { path = ".." }
 
