--- a/scripts/benchmarks/pyproject.toml
+++ b/scripts/benchmarks/pyproject.toml
@@ -1,11 +1,3 @@
-[tool.black]
-line-length = 120
-
-[tool.ruff]
-line-length = 120
-select = ["E", "F", "W", "I", "C", "RET", "ANN", "UP"]
-target-version = "py310"
-
 [tool.poetry]
 name = "scripts"
 version = "0.1.0"
@@ -13,12 +5,14 @@ description = ""
 authors = ["Charles Marsh <charlie.r.marsh@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.11"
-autoflake = "^1.4"
-flake8 = "^5.0.4"
-pycodestyle = "^2.9.1"
-pyflakes = "^2.5.0"
-pylint = "^2.15.0"
+python = ">=3.10,<3.12"
+autoflake = "^2.0.0"
+flake8 = "^6.0.0"
+pycodestyle = "^2.10.0"
+pyflakes = "^3.0.1"
+pylint = "^2.15.10"
+black = "^22.12.0"
+isort = "^5.11.4"
 
 [tool.poetry.dev-dependencies]
 
