Update CI to use MSRV for cargo test and build
As per Cargo.toml our minimal supported Rust version is 1.65.0, so we
should be using that version in our CI for cargo test and cargo build.

This was apparently accidentally changed in
79ca66ace5ebba10e94cda9925d19fdfc50ac327.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -70,7 +70,7 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: nightly-2022-11-01
+          toolchain: 1.65.0
           override: true
       - uses: Swatinem/rust-cache@v1
       - run: cargo install cargo-insta
@@ -122,7 +122,7 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: nightly-2022-11-01
+          toolchain: 1.65.0
           override: true
       - uses: Swatinem/rust-cache@v1
       - uses: actions/setup-python@v4
