Upgrade to toml v0.5.11

--- a/flake8_to_ruff/Cargo.toml
+++ b/flake8_to_ruff/Cargo.toml
@@ -16,7 +16,7 @@ serde = { version = "1.0.147", features = ["derive"] }
 serde_json = { version = "1.0.87" }
 strum = { version = "0.24.1", features = ["strum_macros"] }
 strum_macros = { version = "0.24.3" }
-toml_edit = { version = "0.17.1", features = ["easy"] }
+toml = { version = "0.5.11" }
 
 [dev-dependencies]
 
