--- a/resources/test/fixtures/pyproject.toml
+++ b/resources/test/fixtures/pyproject.toml
@@ -54,6 +54,8 @@ pandas = "pd"
 
 [tool.ruff.flake8-import-conventions.extend-aliases]
 "dask.dataframe" = "dd"
+"xml.dom.minidom" = "md"
+"minidom" = "md"
 
 [tool.ruff.flake8-pytest-style]
 fixture-parentheses = false
