--- a/resources/test/fixtures/pyproject.toml
+++ b/resources/test/fixtures/pyproject.toml
@@ -55,7 +55,7 @@ pandas = "pd"
 [tool.ruff.flake8-import-conventions.extend-aliases]
 "dask.dataframe" = "dd"
 "xml.dom.minidom" = "md"
-"minidom" = "md"
+"xml.dom.minidom.parseString" = "pstr"
 
 [tool.ruff.flake8-pytest-style]
 fixture-parentheses = false
