--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,8 @@ repos:
     rev: v0.0.233
     hooks:
       - id: ruff
+        args: [--fix]
+        exclude: ^resources
 
   - repo: https://github.com/abravalheri/validate-pyproject
     rev: v0.10.1
@@ -13,6 +15,6 @@ repos:
     hooks:
       - id: cargo-fmt
         name: cargo fmt
-        entry: cargo fmt --
+        entry: cargo +nightly fmt --
         language: rust
         types: [rust]
